# mFPS

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  InputDefinitions.h  InputManager.cpp  InputManager.h  Readme.md  mFPS.sln  mFPS.vcxproj  mFPS.vcxproj.filters  main.cpp
Data/: InputActions.xml
Data/Material/: gas-station.mtl  house-mid.mtl  square.mtl  test_alex.mtl  vertex_color_test.mtl
Data/Material/CommonResources/: Light.mtl
Data/Shader/: PixelUberShader.gls  VertexUberShader.gls  pixelTest.gls  pixelTestPlainColor.gls  pixelTextTint.gls  vertexTest.gls  vertexTestTransform.gls
Data/World/: TestWorld.xml
Dependencies/glfw/: CMakeLists.txt
src/mBase/: CMakeLists.txt  CheckedDelete.h  Logger.h  StringUtils.h  TemplatedMapVector.h  game_math.h  mBase.vcxproj  mBase.vcxproj.filters
src/mBase/XML/: XML.cpp  XML.h
src/mBase/x64/Debug/mBase.tlog/: mBase.lastbuildstate
src/mBase/x64/Release/mBase.tlog/: mBase.lastbuildstate
src/mFPS/: CMakeLists.txt  Game.cpp  Game.h  InputDefinitions.h  InputManager.cpp  InputManager.h  World.cpp  World.h  main.cpp
src/mFPS/Cameras/: CameraBase.cpp  CameraBase.h  FPSCamera.cpp  FPSCamera.h  LookAtCamera.cpp  LookAtCamera.h
src/mFPS/Input/: ActionManager.cpp  ActionManager.h  InputAction.cpp  InputAction.h  InputDefinitions.h  InputManager.cpp  InputManager.h
src/mGL/: CMakeLists.txt  CameraBase.cpp  CameraBase.h  FPSCamera.cpp  FPSCamera.h  IMaterialParameter.cpp  IMaterialParameter.h  LookAtCamera.cpp  LookAtCamera.h  Material.cpp  Material.h  MaterialColorParameter.cpp  MaterialColorParameter.h  MaterialTextureParameter.cpp  MaterialTextureParameter.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  RenderableObject.cpp  RenderableObject.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Vertex.h  mGL.vcxproj  mGL.vcxproj.filters
src/mGL/Lights/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightFactory.cpp  LightFactory.h  LightsManager.cpp  LightsManager.h  PointLight.cpp  PointLight.h
src/mGL/Material/: IMaterialParameter.cpp  Material.cpp  Material.h  MaterialColorParameter.cpp  MaterialFactory.cpp  MaterialFactory.h  MaterialTextureParameter.cpp  MaterialTextureParameter.h
src/mGL/Renderable/: RenderableModel.cpp  RenderableModel.h  RenderableObject.cpp  RenderableObject.h
src/mGL/Texture/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  stb_image.h
